IGNITE-15285 remove list storages from ConfigurationManager and ConfigurationRegistry